# cmake_template

./: .CMakeUserPresets.json  .clang-format  .clang-tidy  .clangd.in  .cmake-format.json  .codespellrc  .editorconfig  .envrc  .gitattributes  .gitignore  .gitlab-ci.yml  .gitlint  .pre-commit-config.yaml  AI_GUIDELINES.md  CI_KNOWN_ISSUES.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CONTRIBUTING.md  Dependencies.cmake  HUMAN_GUIDELINES.md  ProjectOptions.cmake  README.md  README_building.md  README_container.md  README_dependencies.md  README_docker.md  conanfile.py  conanfile.txt  gcovr.cfg  jenkinsfile  project_variables.cmake  requirements.txt  vcpkg-configuration.json
.devcontainer/: .dockerignore  Containerfile  Containerfile.intel  Dockerfile  devcontainer.json  docker-compose.yml
.github/: constants.env
.github/actions/setup_cache/: action.yml
.github/template/: README.md  removal-list  template_name  template_repository
.github/variables/: PROJECT_NAME
.github/workflows/: auto-clang-format.yml  build-ci-image.yml  ci.yml  codeql-analysis.yml  devcontainer.yml  template-janitor.yml  wasm.yml
cmake/: Bloaty.cmake  CPM.cmake  Cache.cmake  CompilerWarnings.cmake  Conan.cmake  Cuda.cmake  Doxygen.cmake  DynamicProjectOptions.cmake  Emscripten.cmake  Hardening.cmake  Index.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  Lizard.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  Standards.cmake  StaticAnalyzers.cmake  SystemLink.cmake  Tests.cmake  Utilities.cmake  VCEnvironment.cmake  Vcpkg.cmake  _FORTIFY_SOURCE.hpp
configured_files/: CMakeLists.txt  config.hpp.in
develop/: index.html
develop/intro/: index.html  intro.js  intro.wasm
docs/: .gitignore  conf.py  index.rst  requirements.txt
fuzz_test/: CMakeLists.txt  README.md  fuzz_tester.cpp
include/myproject/: sample_library.hpp
intro/: index.html  intro.js  intro.wasm
src/: CMakeLists.txt  main.cpp
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
test/: CMakeLists.txt  check_system_includes.cmake.in  constexpr_tests.cpp  mock_tests.cpp  test_cmake_presets.cmake  tests.cpp
test/cmake/: test_no_redundant_warnings.cmake
web/: coi-serviceworker.min.js  index_template.html.in  shell.html  shell_template.html.in
